--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ^3.5.4
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_screenutil: # Added for responsive UI based on screen size
+  swipe_tab_controller: ^1.0.0 # Added for swipe to change the tab view
 
 
   # The following adds the Cupertino Icons font to your application.
